# lvl4-ros2-sim-comp

./: .gitignore  LICENSE  README.md  main.py  manual.md  utils.py
gazebo_simple_arm_control/: CMakeLists.txt  package.xml
gazebo_simple_arm_control/examples/: ur10_position.cpp
ign_publisher/: CMakeLists.txt  publisher.cc  robot_publisher.cc
moveit_rviz/: CMakeLists.txt  package.xml
moveit_rviz/launch/: run_move_group.launch.py
moveit_rviz/src/: run_move_group.cpp
sim_action_server/: package.xml
sim_action_server/include/: sim_action_server.hpp
sim_action_server/src/: sim_action_server.cpp
sim_compare/: main.py  process_recorder.py  resource_monitor.py
sim_compare/resources/: homescreen.ui  ui_homescreen.py
sim_recorder/: package.xml  script.sh  setup.py
sim_recorder/data/: homescreen.ui
sim_recorder/sim_recorder/: gazebo_spawner.py  grapher.py  proc_monitor.py  proc_monitor_gui.py  resource_monitor.py  run_recording.py  ui_homescreen.py  webots_spawner.py
sim_spawner/: package.xml  setup.py
sim_spawner/sim_spawner/: gazebo_spawner.py  object_service.py  webots_spawner.py  webots_throw_spawner.py
simpleArm/: package.xml  setup.cfg  setup.py
simple_arm/: package.xml  setup.py
simple_arm/configs/: arm_controller_ur10.yaml  ignition.config
simple_arm/launch/: collision_gazebo.launch.py  gazebo.launch.py  ign.launch.py  ign_place.launch.py  ign_throw.launch.py  ign_vr.launch.py  moveit.launch.py  moveit_controller.launch.py  moveit_gazebo.launch.py  moveit_param.yaml  throw_moveit.launch.py  vr_position.launch.py
simple_arm/simple_arm/: gz_srv_disable.py  utils.py  vr_publish.py
simple_arm/urdf/: ur.transmission.xacro  ur10.urdf  ur10_robot.urdf.xacro
simple_arm/worlds/: empty.sdf  empty.world  panda_place.sdf  panda_throw.sdf
simple_arm_controller/: CMakeLists.txt  package.xml
simple_arm_controller/controllers/: control_test.cpp  gazebo_controller.cpp  ign_controller.cpp  moveit_controller.cpp  vr_controller.cpp  webots_controller.cpp
simple_arm_controller/include/: moveit.hpp  moveit_controller.hpp
simple_arm_controller/src/: gazebo_controller.cpp  ign_controller.cpp  moveit_collision.cpp  moveit_controller.cpp  moveit_ign.cpp  pose_tracking_demo.cpp  republisher.cpp  throw_ign.cpp  throw_moveit.cpp  vr_controller.cpp  webots_controller.cpp
simple_interface/: CMakeLists.txt  package.xml
simple_interface/srv/: GetNames.srv
simple_move_group/: CMakeLists.txt  package.xml
simple_move_group/config/: controllers.yaml  panda.srdf  panda_controllers.yaml  start_positions.yaml
simple_move_group/launch/: run_move_group.launch.py  run_move_group.rviz
simple_move_group/src/: run_move_group.cpp
src/simple_arm/: setup.py
src/simple_arm/configs/: ignition.config
src/simple_arm/launch/: ign.launch.py
src/simple_arm/models/ur10/: ur10.sdf
src/simple_arm/simple_arm/: ign_publisher.py  vr_publish.py
src/simple_arm/urdf/: ur10.sdf  ur10.urdf  ur10.urdf.xacro  ur10_robot.urdf.xacro
src/simple_arm/worlds/: empty.sdf
ur_configs/: package.xml  setup.cfg  setup.py
ur_configs/configs/: arm_controller_panda.yaml  arm_controller_ur10.yaml  controllers.yaml  ompl_planning.yaml  start_positions.yaml  ur10_simulated_config.yaml
ur_configs/meshes/panda/: model.config
ur_configs/rviz/: moveit_ur10.rviz  webots_ur10.rviz
ur_configs/urdf/: ur10.urdf  ur10.urdf.xacro  ur10_robot.urdf.xacro
ur_configs/urdf/panda/: hand.xacro  panda.control.xacro  panda.urdf  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_hand.sdf  panda_arm_hand.urdf  panda_arm_hand.urdf.xacro
ur_configs/urdf/ur10/: ur10.urdf  ur10_robot.urdf.xacro
webots_simple_arm/: README.md  package.xml  setup.py
webots_simple_arm/launch/: collision_webots.launch.py  moveit_webots.launch.py  panda.launch.py  panda_trajectory.launch.py  pick_place.launch.py  universal_robot.launch.py  universal_robot_multiple.launch.py  universal_robot_rviz.launch.py  universal_robot_rviz_dynamic.launch.py  vr_webots.launch.py
webots_simple_arm/webots_simple_arm/: panda.py  panda_trajectory.py
webots_simple_arm/worlds/: panda.wbt  universal_robot.wbt  universal_robot_rviz.wbt
