<?xml version="1.0"?>
<package format="2">
  <name>simple_arm_control</name>
  <version>0.0.1</version>
  <description>simple_arm_control</description>

  <maintainer email="2330834a@student.gla.ac.uk">Florent Audonnet</maintainer>
  <author>Florent Audonnet</author>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sim_action_server</build_depend>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>sim_action_server</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
